TrainingCellDll/Interface.h

/// <summary>
/// Delegate to acquire array from the caller side
/// </summary>
typedef void (*GetArrayCallBack)(const int size, const unsigned int* arr);
	/// <summary>
	/// Plays given number of episodes between the given pair of agents.
	/// Returns statistics if succeeded.
	/// </summary>
	TRAINING_CELL_API int Play(
		TrainingCell::Agent* agent1,
		TrainingCell::Agent* agent2,
		int episodes, 
		TrainingCell::StateTypeId state_type_id,
		TrainingCell::PublishStateCallBack publishStateCallBack,
		TrainingCell::PublishEndEpisodeStatsCallBack publishStatsCallBack, TrainingCell::CancelCallBack cancellationCallBack,
		TrainingCell::ErrorMessageCallBack errorCallBack, TrainingCell::Board::Stats& stats);
	/// <summary>
	/// Trains given pair of agents for the given number of "non-trivial" (non-draw) episodes.
	/// Returns statistics if succeeded.
	/// </summary>
	TRAINING_CELL_API int Train(
		TrainingCell::Agent* agent1,
		TrainingCell::Agent* agent2,
		int episodes,
		TrainingCell::StateTypeId state_type_id,
		TrainingCell::PublishEndEpisodeStatsCallBack publishStatsCallBack, TrainingCell::CancelCallBack cancellationCallBack,
		TrainingCell::ErrorMessageCallBack errorCallBack, TrainingCell::Board::Stats& stats);
	/// <summary>
	/// Constructs a random agent on the heap and returns pointer to it
	/// </summary>
	TRAINING_CELL_API void* ConstructRandomAgent();
	/// <summary>
	/// Disposes the agent pointed by the given pointer
	/// </summary>
	TRAINING_CELL_API bool FreeRandomAgent(const TrainingCell::RandomAgent* agent_ptr);
	/// <summary>
	/// Constructs a TD(lambda) agent on the heap and returns pointer to it
	/// </summary>
	/// <param name="hidden_layer_dims">Dimensions of hidden layers (input and output layer dimensions
	/// will be deduced from the state type)</param>
	/// <param name="dims_count">Number of elements in "layer_dims" array</param>
	/// <param name="exploration_epsilon">Probability of making exploration move</param>
	/// <param name="lambda">The corresponding parameter of TD(lambda) method</param>
	/// <param name="gamma">Discount coefficient (used to evaluate value of a state)</param>
	/// <param name="alpha">Step of the gradient method (learning rate)</param>
	/// <param name="state_type_id">ID of the state type the agent will be specialized on.</param>
	TRAINING_CELL_API void* ConstructTdLambdaAgent(const unsigned int* hidden_layer_dims,
		const int dims_count, const double exploration_epsilon, const double lambda, const double gamma, const double alpha,
		const TrainingCell::StateTypeId state_type_id);
	/// <summary>
	/// Returns pointer to a copy of the TD(lambda) agent pointed by the given pointer
	/// Returns "null" if failed
	/// </summary>
	TRAINING_CELL_API void* TdLambdaAgentCreateCopy(const TrainingCell::TdLambdaAgent* agent_ptr);
	/// <summary>
	/// Returns true if the TD(lambda) agents pointed by the two given pointers are equal
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentsAreEqual(const TrainingCell::TdLambdaAgent* agent0_ptr,
		const TrainingCell::TdLambdaAgent* agent1_ptr);
	/// <summary>
	/// Updates exploration probability parameter of TD(lambda) agent represented with its pointer
	///	Returns "true" if succeeded
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentSetEpsilon(TrainingCell::TdLambdaAgent* agent_ptr, const double exploration_epsilon);
	/// <summary>
	/// Returns exploration probability of TD(lambda) agent represented with its pointer
	/// </summary>
	TRAINING_CELL_API double TdLambdaAgentGetEpsilon(const TrainingCell::TdLambdaAgent* agent_ptr);
	/// <summary>
	/// Updates "lambda" parameter of TD(lambda) agent represented with its pointer
	///	Returns "true" if succeeded
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentSetLambda(TrainingCell::TdLambdaAgent* agent_ptr, const double lambda);
	/// <summary>
	/// Returns "lambda" parameter of TD(lambda) agent represented with its pointer
	/// </summary>
	TRAINING_CELL_API double TdLambdaAgentGetLambda(const TrainingCell::TdLambdaAgent* agent_ptr);
	/// <summary>
	/// Updates "gamma" (reward discount) parameter of TD(lambda) agent represented with its pointer
	///	Returns "true" if succeeded
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentSetGamma(TrainingCell::TdLambdaAgent* agent_ptr, const double gamma);
	/// <summary>
	/// Returns "gamma" (reward discount) parameter of TD(lambda) agent represented with its pointer
	/// </summary>
	TRAINING_CELL_API double TdLambdaAgentGetGamma(const TrainingCell::TdLambdaAgent* agent_ptr);
	/// <summary>
	/// Updates learning rate parameter of TD(lambda) agent represented with its pointer
	///	Returns "true" if succeeded
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentSetLearningRate(TrainingCell::TdLambdaAgent* agent_ptr, const double alpha);
	/// <summary>
	/// Returns learning rate parameter of TD(lambda) agent represented with its pointer
	/// </summary>
	TRAINING_CELL_API double TdLambdaAgentGetLearningRate(const TrainingCell::TdLambdaAgent* agent_ptr);
	/// <summary>
	/// Updates "reward factor" parameter of TD(lambda) agent represented with its pointer
	/// Returns "true" if succeeded
	/// "Reward factor" serves to scale value of internal reward function of the agent
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentSetRewardFactor(TrainingCell::TdLambdaAgent* agent_ptr, const double reward_factor);
	/// <summary>
	/// Returns "reward factor" parameter of TD(lambda) agent represented with its pointer
	/// "Reward factor" serves to scale value of internal reward function of the agent
	/// Returns "NaN" if failed
	/// </summary>
	TRAINING_CELL_API double TdLambdaAgentGetRewardFactor(const TrainingCell::TdLambdaAgent* agent_ptr);
	/// <summary>
	/// Updates "search depth" parameter of TD(lambda) agent represented with its pointer
	/// Returns "true" if succeeded
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentSetSearchDepth(TrainingCell::TdLambdaAgent* agent_ptr, const int search_depth);
	/// <summary>
	/// Returns "search depth" parameter of TD(lambda) agent represented with its pointer
	/// Returns "-1" if failed
	/// </summary>
	TRAINING_CELL_API int TdLambdaAgentGetSearchDepth(const TrainingCell::TdLambdaAgent* agent_ptr);
	/// <summary>
	/// Returns neural net dimensions of TD(lambda) agent represented with its pointer
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentGetNetDimensions(const TrainingCell::TdLambdaAgent* agent_ptr,
		const GetArrayCallBack acquireDimensionsCallBack);
	/// <summary>
	/// Tries to load TD(lambda) agent from the given file on disk and returns pointer to it in case of success
	///	(otherwise null pointer is returned)
	/// </summary>
	TRAINING_CELL_API void* TdLambdaAgentLoadFromFile(const char* path);
	/// <summary>
	/// Returns "true" if the two agents represented with their pointers are equal
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentEqual(const TrainingCell::TdLambdaAgent* agent_ptr1, const TrainingCell::TdLambdaAgent* agent_ptr2);
	/// <summary>
	/// Tries to save the given TD(lambda) agent represented with its pointer to the given file on disk
	/// Returns "true" if succeeded
	/// </summary>
	TRAINING_CELL_API bool TdLambdaAgentSaveToFile(const TrainingCell::TdLambdaAgent* agent_ptr, const char* path);